--- a/VacationDecision/Tabs/CriterionEntityTab.xaml
+++ b/VacationDecision/Tabs/CriterionEntityTab.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="VacationDecision.Tabs.Vectors"
+﻿<UserControl x:Class="VacationDecision.Tabs.CriterionEntityTab"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:customcontrols="clr-namespace:VacationDecision.CustomControls"
              xmlns:entityfields="clr-namespace:VacationDecision.CustomControls.EntityFields"
-             MinHeight="300" MaxHeight="500" Width="Auto">
+             Height="470" MaxHeight="500" Width="Auto">
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -17,7 +17,7 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <entityfields:VectorFields DataContext="{Binding Path=VectorFieldsViewModel}" />
+        <entityfields:CriterionFields DataContext="{Binding Path=CriterionFieldsViewModel}" />
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
             <Button Name="Filter" Content="Filter" Width="65" Margin="2" HorizontalAlignment="Left" Click="Filter_Click" />
