--- a/VacationDecision/Tabs/MarkEntityTab.xaml
+++ b/VacationDecision/Tabs/MarkEntityTab.xaml
@@ -1,7 +1,7 @@
-﻿<UserControl x:Class="VacationDecision.Tabs.Experts"
+﻿<UserControl x:Class="VacationDecision.Tabs.MarkEntityTab"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:customControls="clr-namespace:VacationDecision.CustomControls"
+             xmlns:customcontrols="clr-namespace:VacationDecision.CustomControls"
              xmlns:entityfields="clr-namespace:VacationDecision.CustomControls.EntityFields"
              MinHeight="300" MaxHeight="500" Width="Auto">
 
@@ -17,7 +17,7 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <entityfields:ExpertFields DataContext="{Binding Path=ExpertFieldsViewModel}" />
+        <entityfields:MarkFields DataContext="{Binding Path=MarkFieldsViewModel}" />
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
             <Button Name="Filter" Content="Filter" Width="65" Margin="2" HorizontalAlignment="Left" Click="Filter_Click" />
@@ -25,7 +25,7 @@
                     IsEnabled="{Binding Path=ClearFilterButtonEnabled, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"/>
         </StackPanel>
 
-        <customControls:EntityDataGrid Grid.ColumnSpan="2" Grid.Row="2" DataContext="{Binding Path=GridControlViewModel}" />
+        <customcontrols:EntityDataGrid DataContext="{Binding Path=GridControlViewModel}" Grid.ColumnSpan="2" Grid.Row="2" />
 
         <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="3" HorizontalAlignment="Right">
             <Button Name="Create" Content="Create" Width="65" Margin="2" Click="Create_Click" />
