--- a/VacationDecision/Tabs/VectorEntityTab.xaml
+++ b/VacationDecision/Tabs/VectorEntityTab.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="VacationDecision.Tabs.Marks"
+﻿<UserControl x:Class="VacationDecision.Tabs.VectorEntityTab"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:customcontrols="clr-namespace:VacationDecision.CustomControls"
@@ -17,7 +17,7 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <entityfields:MarkFields DataContext="{Binding Path=MarkFieldsViewModel}" />
+        <entityfields:VectorFields DataContext="{Binding Path=VectorFieldsViewModel}" />
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
             <Button Name="Filter" Content="Filter" Width="65" Margin="2" HorizontalAlignment="Left" Click="Filter_Click" />
