--- a/VacationDecision/Tabs/ComparisonTab.xaml
+++ b/VacationDecision/Tabs/ComparisonTab.xaml
@@ -1,18 +1,81 @@
 ﻿<UserControl x:Class="VacationDecision.Tabs.ComparisonTab"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             MinHeight="300" MaxHeight="500" Width="Auto">
+             Width="Auto" DataContextChanged="UserControl_DataContextChanged">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="boolToVisible" />
+    </UserControl.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Margin="10" HorizontalAlignment="Center" Text="{Binding Path=CurrentWinnerText}" />
+        <TextBlock Grid.Row="0" Margin="10" HorizontalAlignment="Center"
+                   FontSize="14" FontWeight="Bold"
+                   Text="{Binding Path=CurrentWinnerText}" />
+        <StackPanel Grid.Row="1" Visibility="{Binding Path=ContinueComparisonAvailable, Converter={StaticResource boolToVisible}, Mode=OneWay}">
+            <TextBlock HorizontalAlignment="Center" Margin="5">
+                There are some new alternatives to compare.
+            </TextBlock>
+            <TextBlock HorizontalAlignment="Center" Margin="5">
+                Do you want to compare the new ones to the winner?
+            </TextBlock>
+            <Button Name="ContinueComparison" HorizontalAlignment="Center" Margin="5" Click="ContinueComparison_Click">
+                Compare to the winner!
+            </Button>
+        </StackPanel>
+
+        <Grid Grid.Row="2" Visibility="{Binding Path=ComparisonStarted, Converter={StaticResource boolToVisible}}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Button Name="Alternative1" Grid.Column="0" Margin="10"
+                    Click="Alternative1_Click">
+                <StackPanel>
+                    <TextBlock Grid.Row="0" HorizontalAlignment="Center" FontWeight="Bold" FontSize="13"
+                               Text="{Binding Path=Alternative1.Name, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Margin="20" />
+                    <ItemsControl Grid.Row="1" ItemsSource="{Binding Path=MarksForAlternative1, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Width="Auto" Orientation="Vertical" Margin="5" HorizontalAlignment="Center">
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0">
+                                        <TextBlock Text="{Binding Path=Criterion.Name}" />
+                                        <TextBlock Text=": " />
+                                    </StackPanel>
+                                    <TextBlock Text="{Binding Path=Name}" HorizontalAlignment="Left" Margin="50,0,0,0" />
+                                </StackPanel>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </StackPanel>
+            </Button>
+            <Button Name="Alternative2" Grid.Column="1" Margin="10"
+                    Click="Alternative2_Click">
+                <StackPanel>
+                    <TextBlock Grid.Row="0" HorizontalAlignment="Center" FontWeight="Bold" FontSize="13"
+                               Text="{Binding Path=Alternative2.Name, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Margin="20" />
+                    <ItemsControl Grid.Row="1" ItemsSource="{Binding Path=MarksForAlternative2, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Width="Auto" Orientation="Vertical" Margin="5" HorizontalAlignment="Center">
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0">
+                                        <TextBlock Text="{Binding Path=Criterion.Name}" />
+                                        <TextBlock Text=": " />
+                                    </StackPanel>
+                                    <TextBlock Text="{Binding Path=Name}" HorizontalAlignment="Left" Margin="50,0,0,0" />
+                                </StackPanel>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </StackPanel>
+            </Button>
+        </Grid>
         
-        
-        
-        <Button Grid.Row="2" Margin="10" Padding="5" Content="Compare from the beginning" />
+        <Button Grid.Row="3" Margin="10" Padding="5" Content="Compare from the beginning" Click="Button_Click" />
     </Grid>
 </UserControl>
